--- a/styles.css
+++ b/styles.css
@@ -75,4 +75,15 @@
   height: 100px;
   width: 100px;
 }
+.carousel .carousel-item {
+  height: 500px;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    min-height: 500px;
+}
 
